--- a/sds.portal.bom/packages.config
+++ b/sds.portal.bom/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net48" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="ClosedXML" version="0.94.2" targetFramework="net46" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net46" />
